UBUNTU/UFW/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
### RULES ###

### tuple ### allow tcp 80,443 0.0.0.0/0 any 0.0.0.0/0 Nginx%20Full - in
-A ufw-user-input -p tcp -m multiport --dports 80,443 -j ACCEPT -m comment --comment 'dapp_Nginx%20Full'

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 Nginx%20HTTP - in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT -m comment --comment 'dapp_Nginx%20HTTP'

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT

### tuple ### allow tcp 5432 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 5432 -j ACCEPT

### tuple ### allow tcp 444 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 444 -j ACCEPT

### tuple ### allow tcp 5005 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 5005 -j ACCEPT

### tuple ### allow tcp 445 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 445 -j ACCEPT

### tuple ### allow tcp 5006 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 5006 -j ACCEPT

### tuple ### allow tcp 8081 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8081 -j ACCEPT

### tuple ### allow tcp 8082 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8082 -j ACCEPT

### tuple ### allow tcp 8080 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8080 -j ACCEPT

### tuple ### allow tcp 5000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 5000 -j ACCEPT

### tuple ### allow tcp 81 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 81 -j ACCEPT

### tuple ### allow tcp 82 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 82 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###
COMMIT
